--- a/lang/bootstrap/src/2-parser/grammar.txt
+++ b/lang/bootstrap/src/2-parser/grammar.txt
@@ -65,7 +65,7 @@ TUPLE -> opar EXPRESSION comma EXPRESSION_LIST cpar #tuple_many
 %left sizeof
 EXPRESSION -> sizeof EXPRESSION #expr_sizeof
 
-# Bitwise: highest priority, it#s grouped first
+# Bitwise: highest priority, it's grouped first
 # That means small chunks: 1 + 3 ^ 5 or 0 -> 1 + (3 ^ 5) or 0
 %left hat amp bar
 EXPRESSION -> EXPRESSION hat EXPRESSION #expr_hat
